fix arrow on mobile

--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ section:first-of-type .wrapper {
 		transform: translateY(-50%);
 		background: #f69804;
 		color: #fff;
-		padding: 4px 0;
+		padding: 2px 0;
 		display: flex;
 		border-radius: 8px 0 0 8px;
 		cursor: pointer;
